import "messageContainer.proto";

//16

message localBinarySenderAddress
{
optional string senderAddress = 1; //The UDP address of the sender, set by datagram router after receiving the message

//Add to message container to allow simulated polymorphism
extend messageContainer
{
optional localBinarySenderAddress alocalBinarySenderAddress = 16;
}
}
